--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Use react hooks to connect a mobx-state-tree store to your components",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint *.ts",
+    "test": "jest --config jestconfig.json",
+    "lint": "eslint src/*.ts",
     "build": "tsc"
   },
   "keywords": [
@@ -14,12 +14,20 @@
     "hooks",
     "react"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jonbnewman/mobx-store-provider.git"
+  },
+  "files": [
+    "lib/**/*"
+  ],
   "author": "Jonathan Newman",
   "license": "MIT",
   "dependencies": {
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
@@ -29,6 +37,7 @@
     "eslint-plugin-react": "^7.18.0",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "ts-jest": "^25.0.0",
     "typescript": "^3.7.5"
   }
 }
