--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./lib",
     "strict": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "lib": ["es2015"]
   },
   "include": ["src"],
