--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.0.2",
+    "@testing-library/react": "^9.4.0",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
@@ -42,7 +44,11 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "jest": "^25.1.0",
+    "mobx": "^5.15.3",
+    "mobx-react": "^6.1.4",
+    "mobx-state-tree": "^3.15.0",
     "prettier": "^1.19.1",
+    "react-dom": "^16.12.0",
     "ts-jest": "^25.0.0",
     "typescript": "^3.7.5"
   }
