--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "jsx": "react"
   },
   "include": ["src"],
   "exclude": ["node_modules", "src/*.test.ts"]
