--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-store-provider",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Use react hooks to connect a mobx-state-tree store to your components",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -30,7 +30,7 @@
   "author": "Jonathan Newman",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.12.0"
+    "react": ">=16.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.2",
