--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobx-store-provider",
-  "version": "1.1.7",
-  "description": "Use react hooks to connect a mobx-state-tree store to your components",
+  "version": "1.1.8",
+  "description": "Use React Hooks with mobx-state-tree",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
