--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "coverage": "jest --config jestconfig.json --coverage",
+    "coverage-ci": "jest --config jestconfig.json --coverage --coverageReporters=text-lcov"
   },
   "keywords": [
     "mobx",
@@ -39,6 +41,7 @@
     "@types/react": "^16.9.19",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
+    "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
