--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,8 @@ jobs:
       - image: circleci/node:7.10
     steps:
       - checkout
+      - run:
+          name: update-npm
+          command: "sudo npm install -g npm@latest"
       - run: npm install
       - run: npm run test
