--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: update-npm
-          command: "sudo npm install -g npm@latest"
+          name: "Update Node.js and npm"
+          command: |
+            curl -sSL "https://nodejs.org/dist/v12.14.1/node-v12.14.1-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v12.14.1-linux-x64    /bin/node
+            curl https://www.npmjs.com/install.sh | sudo bash
       - run: npm install
       - run: npm run test
