--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,7 @@ jobs:
       - image: circleci/node:7.10
     steps:
       - checkout
-      - run:
-          name: "Update npm"
-          command: |
-            npm install npm@latest
-            sudo rm -rf /usr/local/lib/node_modules/npm
-            sudo mv node_modules/npm /usr/local/lib/node_modules/npm
-            sudo chown -R 500:500 /usr/local/lib/node_modules/npm
+      - run: sudo npm i -g npm
       - run:
           name: "Checking Versions"
           command: |
