--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,16 @@ jobs:
     steps:
       - checkout
       - run:
-        name: "Upgrade NPM"
-        command: |
-          mkdir /root/.nvm \
-            && curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash \
-            && . /root/.nvm/nvm.sh \
-            && nvm install 13.5.0 \
-            && nvm alias default 13.5.0 \
-            && nvm use default
+          name: Upgrade NPM
+          command: |
+            mkdir /root/.nvm
+            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
+            . /root/.nvm/nvm.sh
+            nvm install 13.5.0
+            nvm alias default 13.5.0
+            nvm use default
       - run:
-          name: "Checking Versions"
+          name: Checking Versions
           command: |
             node --version
             npm --version
