--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,12 @@ jobs:
       - run:
           name: Upgrade NPM
           command: |
-            mkdir /root/.nvm
-            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
+            sudo mkdir /root/.nvm
+            sudo curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
             . /root/.nvm/nvm.sh
-            nvm install 13.5.0
-            nvm alias default 13.5.0
-            nvm use default
+            sudo nvm install 13.5.0
+            sudo nvm alias default 13.5.0
+            sudo nvm use default
       - run:
           name: Checking Versions
           command: |
