--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,13 @@ jobs:
       - run:
           name: Upgrade NPM
           command: |
-            sudo mkdir /root/.nvm
-            sudo curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
-            . /root/.nvm/nvm.sh
-            sudo nvm install 13.5.0
-            sudo nvm alias default 13.5.0
-            sudo nvm use default
+            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.35.2/install.sh | bash
+            export NVM_DIR="/opt/circleci/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+            nvm install v13.7.0
+            nvm alias default v13.7.0
+            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
+            echo "[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"" >> $BASH_ENV
       - run:
           name: Checking Versions
           command: |
