--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,14 @@
-version: 2
-
 jobs:
   build:
-    docker:
-      - image: circleci/node:7.10
+    executor:
+      name: node/default
+      tag: "10.4"
     steps:
       - checkout
-      - run:
-          name: Upgrade NPM
-          command: |
-            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.35.2/install.sh | bash
-            export NVM_DIR="/opt/circleci/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            nvm install v6.2.2
-            nvm alias default v6.2.2
-            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
-            echo "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\"" >> $BASH_ENV
-      - run:
-          name: Checking Versions
-          command: |
-            node --version
-            npm --version
-      - run: npm install
+      - node/with-cache:
+          steps:
+            - run: npm install
       - run: npm run test
+orbs:
+  node: circleci/node@1.1
+version: 2.1
