--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-      - run: npm run test
+      - run:
+          name: Run coverage
+          command: npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 orbs:
   node: circleci/node@1.1
 version: 2.1
