--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mobx-store-provider",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "Use React Hooks with mobx-state-tree",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
+    "test-watch": "jest --config jestconfig.json --watch",
     "lint": "eslint src/*.ts",
     "build": "tsc",
     "watch": "tsc -w",
