--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015", "dom", "esnext"],
     "jsx": "react"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/*.test.tsx"]
+  "exclude": ["node_modules", "src/tests"]
 }
