moved eslintignore config into package.json

--- a/package.json
+++ b/package.json
@@ -114,5 +114,10 @@
     "rules": {
       "no-unused-vars": "off"
     }
-  }
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "dist",
+    "coverage"
+  ]
 }
