added github pages url as homepage attribute to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "mobx-store-provider",
-  "version": "1.4.8",
+  "version": "1.4.9",
   "description": "Use React Hooks with mobx-state-tree",
+  "homepage": "https://jonbnewman.github.io/mobx-store-provider/",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
