added github link, removed toc from api-details-and-examples.md

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 remote_theme: pmarsceill/just-the-docs
+aux_links:
+  "mobx-store-provider on GitHub":
+    - "//github.com/jonbnewman/mobx-store-provider"
