added ga tracking

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,6 +2,8 @@ remote_theme: pmarsceill/just-the-docs
 color_scheme: "dark"
 logo: "/logo.png"
 heading_anchors: true
+footer_content: ""
 aux_links:
   "view on GitHub":
     - "//github.com/jonbnewman/mobx-store-provider"
+ga_tracking: UA-158980290-1
