--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-store-provider",
-  "version": "1.4.13",
+  "version": "1.4.14",
   "description": "Use React Hooks with mobx-state-tree",
   "homepage": "http://mobx-store-provider.overfoc.us/",
   "main": "lib/index.js",
@@ -34,29 +34,27 @@
   ],
   "author": "Jonathan Newman",
   "license": "MIT",
-  "dependencies": {
-    "react": ">=16.8"
-  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
     "@types/jest": "^25.1.3",
-    "@types/react": "^16.9.22",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@types/react": "^16.9.23",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "react": ">=16.13",
     "jest": "^25.1.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "mobx-state-tree": "^3.15.0",
     "prettier": "^1.19.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.0",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "transform": {
