--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
   "license": "MIT",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.23",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "react": ">=16.13",
+    "react": "^16.13",
     "jest": "^25.1.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -55,6 +55,9 @@
     "react-dom": "^16.13.0",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "react": ">=16.8"
   },
   "jest": {
     "transform": {
