--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-store-provider",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Use React Hooks with mobx-state-tree",
   "homepage": "http://mobx-store-provider.overfoc.us/",
   "main": "lib/index.js",
@@ -58,7 +58,8 @@
     "typescript": "^4.1.2"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "react": ">=16.8",
+    "mobx-state-tree": ">=3.0.0"
   },
   "jest": {
     "transform": {
