--- a/package.json
+++ b/package.json
@@ -36,26 +36,26 @@
   "license": "MIT",
   "sideEffects": false,
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.21",
-    "@types/react": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "coveralls": "^3.1.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "coveralls": "^3.1.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.2",
     "react": "^17.0.0",
-    "jest": "^26.6.3",
-    "mobx": "^6.1.8",
-    "mobx-react": "^7.1.0",
-    "mobx-state-tree": "^5.0.1",
-    "prettier": "^2.2.1",
-    "react-dom": "^17.0.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "jest": "^27.2.0",
+    "mobx": "^6.3.3",
+    "mobx-react": "^7.2.0",
+    "mobx-state-tree": "^5.0.2",
+    "prettier": "^2.4.1",
+    "react-dom": "^17.0.2",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
     "react": ">=16.8",
@@ -73,7 +73,8 @@
       "jsx",
       "json",
       "node"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   },
   "prettier": {
     "semi": true,
